--- a/index.html
+++ b/index.html
@@ -2,7 +2,26 @@
     <head>
         <meta charset="utf-8>"
         <title>table of names and emails</title>
-
+        <link rel="stylesheet" href="style.css">
+<style>
+    p{
+        color: blue;
+        background-color: yellow;
+    }
+    h1{
+        color: brown;
+        background-color: black;
+        padding: 20px;
+        border: 2px red dotted;
+        border-radius: 20px;
+    }
+    table{
+        border: 1px solid;
+        color: yellow;
+        background-color: blue;
+    }
+    
+</style>
     </head>
     <body>
     <h1>this are my friends;</h1>
