--- a/brian.html
+++ b/brian.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>about brian</title>
+        <link ref="stylesheet" href="index.css">
     </head>
     <body>
         <h1>hobbies</h1>
