--- a/prossy.html
+++ b/prossy.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>about prossy</title>
+         <link ref="stylesheet" href="index.css">
+
     </head>
     <body>
         <h1>hobbies</h1>
