--- a/brian.html
+++ b/brian.html
@@ -2,13 +2,16 @@
 <html>
     <head>
         <title>about brian</title>
-        <link ref="stylesheet" href="index.css">
+        <link rel="stylesheet" href="index.css">
     </head>
-    <body>
-        <h1>hobbies</h1>
-        <p>i love soccer and rugby.</p>
-        <h2>other hobbies.</h2>
-        <ul>
+    <body style="background-color: aquamarine; background-image:">
+        <a href="prossy.html">prossy</a>
+        <a href="brian.html">brian</a>
+
+        <h1 class="forest">hobbies</h1>
+        <p class="gal">i love soccer and rugby.</p>
+        <h2 class="hb">other hobbies.</h2>
+        <ul class="list">
             <li>eating</li>
             <li>having fun with friens</li>
             <li>playing soccer</li>
@@ -16,6 +19,7 @@
 
 
         </ul>
+        <img src="cathy.jpg" height="200px" width="300px">
 
 
     </body>
